--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
- <img src="cadeado.svg" alt="">
+
+    <img src="cadeado.svg" alt="">
+    <h2 class="titulo-principal">Gerador de senhas</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
     
 </body>
 </html>
